--- a/style.css
+++ b/style.css
@@ -134,27 +134,26 @@ html {
     position: fixed;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin-top: 35px;
+    margin-top: 30px;
     display: flex;
     gap: 25px;
     text-align: center;
 }
 .explore2 button{
-    background-color: #ffdd5500;
+    background-color: #ffdd55;
     border: 1px solid #FFDD55;
     border-radius: 20px;
-    padding: 10px 20px 10px 20px;
+    padding: 10px 20px;
     transition: scale 2s;
 
 }
 .explore2 a{
     text-decoration: none;
     font-family: "Josefin Sans", sans-serif;
-    color: #FFDD55;
+    color: #FF543E;
     letter-spacing: 1.5;
     transition: scale 2s;
-    font-size: 15px;
-    color: #ffffff;
+    font-size: 13px;
 
 }
 .explore2 button:hover{
@@ -182,7 +181,16 @@ form ::placeholder{
 form{
     margin-top: -30px;
 }
-
+.public{
+    margin-top: 95px;
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 12px;
+    font-weight: 100;
+}
+.public a{
+    text-decoration: none;
+    color: #ffffff;
+}
 /* responsive design */
 /* small phone */
 @media screen and (max-width: 320px) {
@@ -191,10 +199,11 @@ form{
     margin-top: 240px;
    }
    .landing2 h1{
-    margin-top: 418px;
+    margin-top: 300px;
     font-size: 48px;
   }
 }
+
 /* Tablet */
 /* @media screen and (max-width: 768px) {
     .landing h1{
