--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -7,6 +7,10 @@ body{
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
     margin: auto;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 body::-webkit-scrollbar {
     display: none;
@@ -956,6 +960,78 @@ form{
   transform: translate(0, 5%);
 }
 
+
+/* Quiz.ejs & Paranoia.ejs styling */
+.avatars{
+  margin-top: 20px;
+  display: flex;
+  gap: 20px;
+}
+.trivianame{
+  color: #333;
+}
+.trivia {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.container{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  height: 500px;
+  text-align: center;
+  align-items: center;
+  max-width: 400px;
+  width: 100%;
+  padding: 20px;
+}
+.options{
+  display: inline-block;
+  width: 100%; /* Ensure the buttons take full width of container */
+}
+.button-52 {
+  font-size: 16px;
+  font-weight: 200;
+  letter-spacing: 1px;
+  padding: 13px 20px 13px;
+  outline: 0;
+  border: 1px solid black;
+  cursor: pointer;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-52:after {
+  content: "";
+  background-color: #ffe54c;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  top: 7px;
+  left: 7px;
+  transition: 0.2s;
+}
+
+.button-52:hover:after {
+  top: 0px;
+  left: 0px;
+}
+
+@media (min-width: 768px) {
+  .button-52 {
+    padding: 13px 50px 13px;
+  }
+}
 @keyframes slideInFromLeft {
   0% {
     transform: translateX(-100%);
