--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Eater&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 body{
     overflow-y: scroll;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
-    margin: auto;
+    margin: 0;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -748,9 +749,8 @@ form{
   background: url(../images/fantasy-style-clouds.jpg) no-repeat; 
   font-family: "Merriweather Sans", sans-serif;
   background-size: cover;
-  background-repeat: no-repeat;
   color: #fff;
-  height: 100vh;
+  /* height: 100vh; */
 }
 .villa-img{
   position: absolute;
@@ -772,7 +772,7 @@ form{
   z-index: 2;
 }
 .sec-p{
-  width: 30%;
+  width: 100%;
   height: 50px;
   margin-bottom: 0px;
 }
@@ -783,10 +783,14 @@ form{
   margin-bottom: 26px; /* 2 times the font size */
   letter-spacing: 1.5px; /* 0.12 times the font size */
   word-spacing: 2px; /* 0.16 times the font size */
+  font-family: "Edu AU VIC WA NT Hand", cursive;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 .sec-h{
-  height: 200px;
+  /* height: 200px; */
   margin-bottom: -30px;
+  /* width: 70%; */
 }
 .sec-h h2{
   font-size: 150px;
@@ -798,25 +802,26 @@ form{
   font-weight: 400;
 }
 .row {
-    display: flex;
-    flex-direction: row;
     height: 100vh; /* Adjust as needed */
     overflow: hidden; /* Prevent horizontal overflow */
 }
 
 .info-section {  
-  display: flex;
-  flex-direction: row;
-  overflow-x: auto;
-  /* justify-content: center; */
-  gap: 35px;
-  margin-top: 100px;
   z-index: 2;
   padding: 50px;
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .glass {
-  display: flex;
+  -ms-flex: 33%; /* IE10 */
+  flex: 33%;
+  max-width: 33%;
+  padding: 0 4px;
+  height: 200px;
   cursor: pointer;
   /* flex-direction: column; */
   align-items: center;
@@ -824,8 +829,6 @@ form{
   border-radius: 15px;
   backdrop-filter: blur(10px);
   padding: 20px;
-  width: 500px; /* Adjust as needed */
-  height: 200px;
   text-align: center;
 }
 
@@ -1031,6 +1034,20 @@ form{
   .button-52 {
     padding: 13px 50px 13px;
   }
+ 
+}
+@media screen and (max-width: 680px) {
+  .glass {
+    -ms-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
+  }
+  .sec-h h2{
+    font-size: 65px;
+    font-family: "Josefin Sans", sans-serif;
+    color: #f0f0f0;
+  }
+  
 }
 @keyframes slideInFromLeft {
   0% {
@@ -1054,7 +1071,11 @@ form{
    .landing2 h1{
     margin-top: 160px;
     font-size: 40px;
-  
+  }
+  .glass{
+    -ms-flex: 100%;
+    flex: 100%;
+    max-width: 100%;
   }
 
 }
