--- a/views/loveislandui.ejs
+++ b/views/loveislandui.ejs
@@ -8,7 +8,7 @@
         <div class="centerpiece">
             <div class="sec-container">
                 <div class="sec-p">
-                    <p>Try Our Love Island Online Game! Join the villa by signing in with your Instagram or as a temporary user. Couple up, join challenges, and enjoy the fun. Temporary users get 31 days of access. Continue with Instagram or quit anytime.</p>
+                    <p>Discover and share cutting-edge UI designs, security solutions, and technical tips.</p>
                 </div>
                 
                 <div class="sec-h">
@@ -17,7 +17,7 @@
                 
                 <div class="liu-button">
                     <button class="button-86"><i class="fa-brands fa-instagram"></i> Log in </button>
-                    <button class="sec-button">Continue as Guest</button>
+                    <button class="sec-button">Create an account</button>
                 </div>
                 
             </div>
@@ -25,15 +25,15 @@
        
         <div class="row">
             <div class="info-section"> 
-                <div class="glass">
+                <div class="glass column">
                     <img src="/images/vecteezy_3d-illustration-of-small-island-view-icon-isolated-on_44635273.png" alt="">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure iste assumenda optio dolorem. Tempore repellat explicabo autem quaerat soluta, quo, cupiditate dolores, quibusdam possimus eligendi iure dolor perferendis dignissimos maxime.</p>
                 </div>
-                <div class="glass">
+                <div class="glass column">
                     <img src="/images/vecteezy_3d-illustration-of-small-island-view-icon-isolated-on_44635273.png" alt="">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure iste assumenda optio dolorem. Tempore repellat explicabo autem quaerat soluta, quo, cupiditate dolores, quibusdam possimus eligendi iure dolor perferendis dignissimos maxime.</p>
                 </div>
-                <div class="glass">
+                <div class="glass column">
                     <img src="/images/vecteezy_3d-illustration-of-small-island-view-icon-isolated-on_44635273.png" alt="">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure iste assumenda optio dolorem. Tempore repellat explicabo autem quaerat soluta, quo, cupiditate dolores, quibusdam possimus eligendi iure dolor perferendis dignissimos maxime.</p>
                 </div>
